force-app/main/default/objects/National_Outings_Trip__c/National_Outings_Trip__c.object-meta.xml
<CustomObject>
    <label>National Outings Trip</label>
    <nameField>
        <label>National Outings Trip Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>National Outings Trips</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>