force-app/main/default/objects/National_Outings_Trip__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <label>Activity Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Base Camp</fullName>
            </value>
            <value>
                <fullName>Bicycle</fullName>
            </value>
            <value>
                <fullName>Backpack</fullName>
            </value>
            <value>
                <fullName>Canoe</fullName>
            </value>
            <value>
                <fullName>Supported Trekking</fullName>
            </value>
            <value>
                <fullName>Hut-to-Hut Trekking</fullName>
            </value>
            <value>
                <fullName>Kayak</fullName>
            </value>
            <value>
                <fullName>Lodge</fullName>
            </value>
            <value>
                <fullName>Raft</fullName>
            </value>
            <value>
                <fullName>Small Boat</fullName>
            </value>
            <value>
                <fullName>Scuba</fullName>
            </value>
            <value>
                <fullName>Service/Volunteer</fullName>
            </value>
            <value>
                <fullName>Snow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>