force-app/main/default/objects/National_Outings_Trip__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>National_Outings_Trip_Area</valueSetName>
    </valueSet>
</CustomField>