force-app/main/default/objects/National_Outings_Trip__c/fields/Backpack_Rating__c.field-meta.xml
<CustomField>
    <fullName>Backpack_Rating__c</fullName>
    <label>Backpack Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Least Difficult</fullName>
            </value>
            <value>
                <fullName>2 - Less Difficult</fullName>
            </value>
            <value>
                <fullName>3 - Difficult</fullName>
            </value>
            <value>
                <fullName>4 - More Difficult</fullName>
            </value>
            <value>
                <fullName>5 - Most Difficult</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>