force-app/main/default/objects/National_Outings_Trip__c/fields/Budget_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Budget_Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>National_Outings_Trips</relationshipName>
    <type>Lookup</type>
</CustomField>