force-app/main/default/objects/National_Outings_Trip__c/fields/Budget_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Budget_Approved_Date__c</fullName>
    <label>Budget Approved Date</label>
    <type>DateTime</type>
</CustomField>