force-app/main/default/objects/National_Outings_Trip__c/fields/Charter_Flights__c.field-meta.xml
<CustomField>
    <fullName>Charter_Flights__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Charter Flights</label>
    <type>Checkbox</type>
</CustomField>