force-app/main/default/objects/National_Outings_Trip__c/fields/Commercial_Agency_Fees__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Agency_Fees__c</fullName>
    <label>Commercial Agency Fees</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>