force-app/main/default/objects/National_Outings_Trip__c/fields/Communication_Devices__c.field-meta.xml
<CustomField>
    <fullName>Communication_Devices__c</fullName>
    <label>Communication Devices</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>