force-app/main/default/objects/National_Outings_Trip__c/fields/Concessionaire_Comments__c.field-meta.xml
<CustomField>
    <fullName>Concessionaire_Comments__c</fullName>
    <label>Concessionaire Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>