force-app/main/default/objects/National_Outings_Trip__c/fields/Concessionaire_Led__c.field-meta.xml
<CustomField>
    <fullName>Concessionaire_Led__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Concessionaire Led</label>
    <type>Checkbox</type>
</CustomField>