force-app/main/default/objects/National_Outings_Trip__c/fields/Conservation_Emphasis__c.field-meta.xml
<CustomField>
    <fullName>Conservation_Emphasis__c</fullName>
    <label>Conservation Emphasis</label>
    <type>TextArea</type>
</CustomField>