force-app/main/default/objects/National_Outings_Trip__c/fields/Date_Last_Returned__c.field-meta.xml
<CustomField>
    <fullName>Date_Last_Returned__c</fullName>
    <label>Date Last Returned</label>
    <type>DateTime</type>
</CustomField>