force-app/main/default/objects/National_Outings_Trip__c/fields/Date_Returned__c.field-meta.xml
<CustomField>
    <fullName>Date_Returned__c</fullName>
    <label>Date Returned</label>
    <type>DateTime</type>
</CustomField>