force-app/main/default/objects/National_Outings_Trip__c/fields/Date_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_Submitted__c</fullName>
    <label>Date_Submitted</label>
    <type>DateTime</type>
</CustomField>