force-app/main/default/objects/National_Outings_Trip__c/fields/Emergency_Contact__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact__c</fullName>
    <label>Emergency Contact</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>