force-app/main/default/objects/National_Outings_Trip__c/fields/Entry_Trail_Head__c.field-meta.xml
<CustomField>
    <fullName>Entry_Trail_Head__c</fullName>
    <label>Entry Trail Head</label>
    <length>255</length>
    <type>Text</type>
</CustomField>