force-app/main/default/objects/National_Outings_Trip__c/fields/Exit_Trail_Head__c.field-meta.xml
<CustomField>
    <fullName>Exit_Trail_Head__c</fullName>
    <label>Exit trailhead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>