force-app/main/default/objects/National_Outings_Trip__c/fields/First_Time_Run__c.field-meta.xml
<CustomField>
    <fullName>First_Time_Run__c</fullName>
    <defaultValue>true</defaultValue>
    <label>First Time Run</label>
    <type>Checkbox</type>
</CustomField>