force-app/main/default/objects/National_Outings_Trip__c/fields/General_Budget_Comments__c.field-meta.xml
<CustomField>
    <fullName>General_Budget_Comments__c</fullName>
    <label>General Budget Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>