force-app/main/default/objects/National_Outings_Trip__c/fields/Geographic_Area__c.field-meta.xml
<CustomField>
    <fullName>Geographic_Area__c</fullName>
    <label>Geographic Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Africa</fullName>
            </value>
            <value>
                <fullName>Asia</fullName>
            </value>
            <value>
                <fullName>Central America</fullName>
            </value>
            <value>
                <fullName>Eastern Europe</fullName>
            </value>
            <value>
                <fullName>Northern Europe</fullName>
            </value>
            <value>
                <fullName>Pacific Basin</fullName>
            </value>
            <value>
                <fullName>South America</fullName>
            </value>
            <value>
                <fullName>Western Europe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>