force-app/main/default/objects/National_Outings_Trip__c/fields/Geolocation__c.field-meta.xml
<CustomField>
    <fullName>Geolocation__c</fullName>
    <inlineHelpText>Plan to have a mapping component</inlineHelpText>
    <label>Geolocation</label>
    <scale>8</scale>
    <type>Location</type>
</CustomField>