force-app/main/default/objects/National_Outings_Trip__c/fields/Group_Type__c.field-meta.xml
<CustomField>
    <fullName>Group_Type__c</fullName>
    <label>Group Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beginners</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>40s/50s</fullName>
            </value>
            <value>
                <fullName>Grandparent/Grandkids</fullName>
            </value>
            <value>
                <fullName>LGBT+</fullName>
            </value>
            <value>
                <fullName>Multigenerational</fullName>
            </value>
            <value>
                <fullName>Seniors (50+)</fullName>
            </value>
            <value>
                <fullName>Teen</fullName>
            </value>
            <value>
                <fullName>30s/40s</fullName>
            </value>
            <value>
                <fullName>Women</fullName>
            </value>
            <value>
                <fullName>20s/30s</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>