force-app/main/default/objects/National_Outings_Trip__c/fields/International_Countries__c.field-meta.xml
<CustomField>
    <fullName>International_Countries__c</fullName>
    <label>International Countries</label>
    <length>255</length>
    <type>Text</type>
</CustomField>