force-app/main/default/objects/National_Outings_Trip__c/fields/IntlQuestion01__c.field-meta.xml
<CustomField>
    <fullName>IntlQuestion01__c</fullName>
    <label>IntlQuestion01</label>
    <length>30</length>
    <type>Text</type>
</CustomField>