force-app/main/default/objects/National_Outings_Trip__c/fields/IntlQuestion02__c.field-meta.xml
<CustomField>
    <fullName>IntlQuestion02__c</fullName>
    <label>IntlQuestion02</label>
    <length>80</length>
    <type>Text</type>
</CustomField>