force-app/main/default/objects/National_Outings_Trip__c/fields/IntlQuestion03__c.field-meta.xml
<CustomField>
    <fullName>IntlQuestion03__c</fullName>
    <label>IntlQuestion03</label>
    <length>80</length>
    <type>Text</type>
</CustomField>