force-app/main/default/objects/National_Outings_Trip__c/fields/Leader_Driving_Participants_During_Trip__c.field-meta.xml
<CustomField>
    <fullName>Leader_Driving_Participants_During_Trip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Leader Driving Participants During Trip?</label>
    <type>Checkbox</type>
</CustomField>