force-app/main/default/objects/National_Outings_Trip__c/fields/Map_Received__c.field-meta.xml
<CustomField>
    <fullName>Map_Received__c</fullName>
    <label>Map Received</label>
    <type>Date</type>
</CustomField>