force-app/main/default/objects/National_Outings_Trip__c/fields/Marketing_Comments__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Comments__c</fullName>
    <label>Marketing Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>