force-app/main/default/objects/National_Outings_Trip__c/fields/Meal_Type__c.field-meta.xml
<CustomField>
    <fullName>Meal_Type__c</fullName>
    <label>Meal Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>100% Vegetarian</fullName>
            </value>
            <value>
                <fullName>Mostly Vegetarian</fullName>
            </value>
            <value>
                <fullName>Some Vegetarian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>