force-app/main/default/objects/National_Outings_Trip__c/fields/Meals_Budget_Option__c.field-meta.xml
<CustomField>
    <fullName>Meals_Budget_Option__c</fullName>
    <defaultValue>&apos;None&apos;</defaultValue>
    <label>Meals Budget Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Subcommittee</fullName>
            </value>
            <value>
                <fullName>Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>