force-app/main/default/objects/National_Outings_Trip__c/fields/Meals_Comments__c.field-meta.xml
<CustomField>
    <fullName>Meals_Comments__c</fullName>
    <label>Meal Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>