force-app/main/default/objects/National_Outings_Trip__c/fields/Meals_Included__c.field-meta.xml
<CustomField>
    <fullName>Meals_Included__c</fullName>
    <label>Meals Included</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Most</fullName>
            </value>
            <value>
                <fullName>Some</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>