force-app/main/default/objects/National_Outings_Trip__c/fields/Meals_Last_Day__c.field-meta.xml
<CustomField>
    <fullName>Meals_Last_Day__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Meals Last Day</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>