force-app/main/default/objects/National_Outings_Trip__c/fields/Minimum_Age__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Age__c</fullName>
    <label>Minimum Age</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>