force-app/main/default/objects/National_Outings_Trip__c/fields/Other_Budget_Comments__c.field-meta.xml
<CustomField>
    <fullName>Other_Budget_Comments__c</fullName>
    <label>Other Budget Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>