force-app/main/default/objects/National_Outings_Trip__c/fields/Overview_of_Trip__c.field-meta.xml
<CustomField>
    <fullName>Overview_of_Trip__c</fullName>
    <label>Overview of Trip</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>