force-app/main/default/objects/National_Outings_Trip__c/fields/Permit_Comments__c.field-meta.xml
<CustomField>
    <fullName>Permit_Comments__c</fullName>
    <label>Permit Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>