force-app/main/default/objects/National_Outings_Trip__c/fields/Permit_Requirement_Options__c.field-meta.xml
<CustomField>
    <fullName>Permit_Requirement_Options__c</fullName>
    <defaultValue>&apos;Commercial Permit (s) are not required&apos;</defaultValue>
    <label>Permit Requirement Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial Permit (s) are not required</fullName>
                <default>true</default>
                <label>Commercial Permit (s) are not required</label>
            </value>
            <value>
                <fullName>Permit Associate Staff will obtain Commercial Permit (s)</fullName>
            </value>
            <value>
                <fullName>Concessionaire will obtain all Commercial Permit (s)</fullName>
            </value>
            <value>
                <fullName>Concessionaire will obtain some Commercial Permit (s)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>