force-app/main/default/objects/National_Outings_Trip__c/fields/Planned_Staff__c.field-meta.xml
<CustomField>
    <fullName>Planned_Staff__c</fullName>
    <label>Planned Staff</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>