force-app/main/default/objects/National_Outings_Trip__c/fields/Post_Trip_Report_Date_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Post_Trip_Report_Date_Submitted__c</fullName>
    <label>Post Trip Report Date Submitted</label>
    <type>DateTime</type>
</CustomField>