force-app/main/default/objects/National_Outings_Trip__c/fields/Post_Trip_Report_Due__c.field-meta.xml
<CustomField>
    <fullName>Post_Trip_Report_Due__c</fullName>
    <formula>End_Date__c &lt; TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Post Trip Report Due</label>
    <type>Checkbox</type>
</CustomField>