force-app/main/default/objects/National_Outings_Trip__c/fields/Post_Trip_Report_Medical__c.field-meta.xml
<CustomField>
    <fullName>Post_Trip_Report_Medical__c</fullName>
    <label>Post Trip Report Medical</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>