force-app/main/default/objects/National_Outings_Trip__c/fields/Post_Trip_Report_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Post_Trip_Report_Submitted__c</fullName>
    <formula>Post_Trip_Report_Date_Submitted__c != null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Post Trip Report Submitted</label>
    <type>Checkbox</type>
</CustomField>