force-app/main/default/objects/National_Outings_Trip__c/fields/Prior_Trip__c.field-meta.xml
<CustomField>
    <fullName>Prior_Trip__c</fullName>
    <label>Prior Trip #</label>
    <length>6</length>
    <type>Text</type>
</CustomField>