force-app/main/default/objects/National_Outings_Trip__c/fields/Prior_Trip_Copy_Changes__c.field-meta.xml
<CustomField>
    <fullName>Prior_Trip_Copy_Changes__c</fullName>
    <label>Prior Trip Copy Changes</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>