force-app/main/default/objects/National_Outings_Trip__c/fields/Prior_Trip_Price__c.field-meta.xml
<CustomField>
    <fullName>Prior_Trip_Price__c</fullName>
    <label>Prior Trip Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>