force-app/main/default/objects/National_Outings_Trip__c/fields/Rentals_Included__c.field-meta.xml
<CustomField>
    <fullName>Rentals_Included__c</fullName>
    <label>Rentals Included</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>