force-app/main/default/objects/National_Outings_Trip__c/fields/Risks_Hazards__c.field-meta.xml
<CustomField>
    <fullName>Risks_Hazards__c</fullName>
    <label>Risks/Hazards</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>