force-app/main/default/objects/National_Outings_Trip__c/fields/Sat_Phone_Needed__c.field-meta.xml
<CustomField>
    <fullName>Sat_Phone_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sat Phone Needed</label>
    <type>Checkbox</type>
</CustomField>