force-app/main/default/objects/National_Outings_Trip__c/fields/Sat_Phone_Needed_Date__c.field-meta.xml
<CustomField>
    <fullName>Sat_Phone_Needed_Date__c</fullName>
    <label>Sat Phone Needed Date</label>
    <type>Date</type>
</CustomField>