force-app/main/default/objects/National_Outings_Trip__c/fields/Sat_Phone_Ship_To_Address__c.field-meta.xml
<CustomField>
    <fullName>Sat_Phone_Ship_To_Address__c</fullName>
    <label>Sat Phone Ship-To Address</label>
    <length>30</length>
    <type>Text</type>
</CustomField>