force-app/main/default/objects/National_Outings_Trip__c/fields/Sat_Phone_Ship_To_City__c.field-meta.xml
<CustomField>
    <fullName>Sat_Phone_Ship_To_City__c</fullName>
    <label>Sat Phone Ship-To City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>