force-app/main/default/objects/National_Outings_Trip__c/fields/Sat_Phone_Ship_To_Name__c.field-meta.xml
<CustomField>
    <fullName>Sat_Phone_Ship_To_Name__c</fullName>
    <label>Sat Phone Ship-To Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>