force-app/main/default/objects/National_Outings_Trip__c/fields/Sat_Phone_Ship_To_State__c.field-meta.xml
<CustomField>
    <fullName>Sat_Phone_Ship_To_State__c</fullName>
    <label>Sat Phone Ship-To State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>