force-app/main/default/objects/National_Outings_Trip__c/fields/Sat_Phone_Ship_To_State_Prov__c.field-meta.xml
<CustomField>
    <fullName>Sat_Phone_Ship_To_State_Prov__c</fullName>
    <label>Sat Phone Ship-To State/Prov</label>
    <length>2</length>
    <type>Text</type>
</CustomField>