force-app/main/default/objects/National_Outings_Trip__c/fields/Sat_Phone_Ship_To_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Sat_Phone_Ship_To_Zip_Code__c</fullName>
    <label>Sat Phone Ship-To Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>