force-app/main/default/objects/National_Outings_Trip__c/fields/Shipping__c.field-meta.xml
<CustomField>
    <fullName>Shipping__c</fullName>
    <label>Shipping</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>