force-app/main/default/objects/National_Outings_Trip__c/fields/States_Provinces__c.field-meta.xml
<CustomField>
    <fullName>States_Provinces__c</fullName>
    <label>States/Provinces</label>
    <type>TextArea</type>
</CustomField>