force-app/main/default/objects/National_Outings_Trip__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&apos;Started&apos;</defaultValue>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Started</fullName>
                <default>true</default>
                <label>Started</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
            <value>
                <fullName>Approved by Chair</fullName>
            </value>
            <value>
                <fullName>Approved by Staff</fullName>
            </value>
            <value>
                <fullName>Uploaded to TRAIL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>