force-app/main/default/objects/National_Outings_Trip__c/fields/Subcommittee__c.field-meta.xml
<CustomField>
    <fullName>Subcommittee__c</fullName>
    <label>Subcommittee</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>