force-app/main/default/objects/National_Outings_Trip__c/fields/Supplies_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Supplies_Equipment__c</fullName>
    <label>Supplies &amp; Equipment</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>