force-app/main/default/objects/National_Outings_Trip__c/fields/Third_Party_Hired__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Hired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Third-Party Hired</label>
    <type>Checkbox</type>
</CustomField>