force-app/main/default/objects/National_Outings_Trip__c/fields/Transportation_Comments__c.field-meta.xml
<CustomField>
    <fullName>Transportation_Comments__c</fullName>
    <label>Transportation Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>