force-app/main/default/objects/National_Outings_Trip__c/fields/Trip_Copy__c.field-meta.xml
<CustomField>
    <fullName>Trip_Copy__c</fullName>
    <label>Trip Copy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>