force-app/main/default/objects/National_Outings_Trip__c/fields/Trip_Type__c.field-meta.xml
<CustomField>
    <fullName>Trip_Type__c</fullName>
    <label>Trip Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>