force-app/main/default/objects/National_Outings_Trip__c/listViews/Test_List1.listView-meta.xml
<ListView>
    <fullName>Test_List1</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Mine</filterScope>
    <label>My National Trips</label>
</ListView>